# abm_framework

./: .gitignore  README.md  analise_tecnica_abm_framework.md  pyproject.toml  setup.py  validate.py
abm/: __init__.py  agent.py  simulation.py  utils.py  world.py
abm_mercados/: __init__.py  cli.py  plugins.py
abm_mercados/core/: events.py  investidor.py  metrics.py  simulation.py  world.py
abm_mercados/examples/: fii_validacao.py  market_example.py  mercado_geral_validacao.py  run_market_simulation.py  validation_utils.py
examples/: agro_validacao.py  fii.yaml  fii_validacao.py  market_example.py  mercado_geral_validacao.py  run_market_simulation.py
outputs/fii/FII_20250915-000308/: demanda_liquida.csv  metricas.json  precos.csv
outputs/fii/FII_20250915-001155/: demanda_liquida.csv  metricas.json  precos.csv
tests/: test_framework.py
